--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
 .app__headerImage {
   background-color: white;
   padding: 20px;
-  border-bottom: 1px solid lightgray;
   object-fit: contain;
+}
+
+.app__header{
+  border-bottom: 1px solid lightgray;
 }
