added signup form

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@
 .app__header{
   border-bottom: 1px solid lightgray;
 }
+
+.app__signup{
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+}
