styled the sign buttons and the media upload

--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,13 @@
   background-color: white;
   padding: 20px;
   object-fit: contain;
+  width: 100px;
 }
 
 .app__header{
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
 }
 
 .app__signup{
