--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,13 @@
   text-align: center;
   flex-direction: column;
 }
+
+.app__posts{
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.app__postsRight{
+  margin-left: 20px;
+}
