--- a/src/Post.css
+++ b/src/Post.css
@@ -33,6 +33,10 @@
     border-top: 1px solid lightgray;
 }
 
+.post__comments {
+    padding: 20px;
+}
+
 .post__input {
     flex: 1;
     border: none;
